# RustEater

./: Cargo.toml
src/: main.rs
