[package]
name = "rusteater"
version = "0.1.0"
authors = ["Naughty <dorminsama@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.16"
reqwest = { version = "0.10.8", features = ["json"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0"
async-std = { version = "1.6.4", features = ["attributes", "tokio02"] }
